Created ShapeFlashView to fill a shape as the user scroll. Added AngleInterpolator. Refactored Interpolators to return the interpolated core attribute. (color,shape,angle) instead of just the interpolation factor.

--- a/CustomUiComponents/app/src/main/res/layout/activity_main.xml
+++ b/CustomUiComponents/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical"
     android:padding="@dimen/default_padding"
     tools:context=".activity.MainActivity">
-    <com.jarvis.dragdropresearch.views.ImageFlashView
+    <com.jarvis.dragdropresearch.views.ShapeFlashView
         android:id="@+id/gesture_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
