--- a/CustomUiComponents/app/src/main/res/values/dimens.xml
+++ b/CustomUiComponents/app/src/main/res/values/dimens.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="default_padding">10dp</dimen>
+
+    <!-- Buttons -->
+    <dimen name="button_width_default">200dp</dimen>
+    <dimen name="button_padding">4dp</dimen>
 </resources>
