UI tweaks to button drawables and padding.

--- a/CustomUiComponents/app/src/main/res/values/styles.xml
+++ b/CustomUiComponents/app/src/main/res/values/styles.xml
@@ -9,4 +9,9 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="StyledButton"
+        parent="Widget.AppCompat.Button">
+        <item name="android:background">@drawable/bg_button</item>
+    </style>
+
 </resources>
