--- a/CustomUiComponents/app/src/main/res/layout/fragment_custom_scrolling_demo_launch.xml
+++ b/CustomUiComponents/app/src/main/res/layout/fragment_custom_scrolling_demo_launch.xml
@@ -25,31 +25,35 @@
         app:layout_constraintGuide_percent="0.75" />
 
     <Button android:id="@+id/btn_launch_scrolling_rails"
+        style="@style/StyledButton"
         android:layout_width="@dimen/button_width_default"
         android:layout_height="wrap_content"
         android:padding="@dimen/default_padding"
         android:text="@string/btn_launch_scrolling_rails"
         app:layout_constraintEnd_toStartOf="@+id/guideline_right_vertical"
         app:layout_constraintStart_toStartOf="@+id/guideline_left_vertical"
+        android:layout_marginBottom="10dp"
         app:layout_constraintTop_toBottomOf="@+id/guideline_top_horizontal" />
     <Button android:id="@+id/btn_launch_image_flash_view"
+        style="@style/StyledButton"
         android:layout_width="@dimen/button_width_default"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        app:layout_constraintTop_toBottomOf="@+id/btn_launch_scrolling_rails"
-        app:layout_constraintStart_toStartOf="@id/guideline_left_vertical"
-        app:layout_constraintEnd_toStartOf="@id/guideline_right_vertical"
+        android:layout_marginTop="10dp"
         android:padding="@dimen/default_padding"
-        android:text="@string/btn_launch_image_flash" />
+        android:text="@string/btn_launch_image_flash"
+        app:layout_constraintEnd_toStartOf="@id/guideline_right_vertical"
+        app:layout_constraintStart_toStartOf="@id/guideline_left_vertical"
+        app:layout_constraintTop_toBottomOf="@+id/btn_launch_scrolling_rails" />
     <Button android:id="@+id/btn_launch_shape_flash_view"
+        style="@style/StyledButton"
         android:layout_width="@dimen/button_width_default"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/btn_launch_image_flash_view"
-        app:layout_constraintStart_toStartOf="@id/guideline_left_vertical"
-        app:layout_constraintEnd_toStartOf="@id/guideline_right_vertical"
-        android:layout_marginBottom="10dp"
+        android:layout_marginTop="10dp"
         android:padding="@dimen/default_padding"
-        android:text="@string/btn_launch_shape_flash" />
+        android:text="@string/btn_launch_shape_flash"
+        app:layout_constraintEnd_toStartOf="@id/guideline_right_vertical"
+        app:layout_constraintStart_toStartOf="@id/guideline_left_vertical"
+        app:layout_constraintTop_toBottomOf="@id/btn_launch_image_flash_view" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline_bottom_horizontal"
