--- a/CustomUiComponents/app/src/main/res/layout/fragment_scrolling_rails_view.xml
+++ b/CustomUiComponents/app/src/main/res/layout/fragment_scrolling_rails_view.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="@dimen/default_padding"
     android:orientation="vertical">
     <com.jarvis.dragdropresearch.views.ScrollingRailsView
         android:id="@+id/gesture_view"
