--- a/CustomUiComponents/app/src/main/res/layout/fragment_shape_flash_view.xml
+++ b/CustomUiComponents/app/src/main/res/layout/fragment_shape_flash_view.xml
@@ -8,5 +8,6 @@
         android:id="@+id/gesture_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:padding="2dp"
         android:background="@drawable/bg_gesture_practice" />
 </LinearLayout>
