--- a/CustomUiComponents/app/src/main/res/layout/fragment_shape_flash_view.xml
+++ b/CustomUiComponents/app/src/main/res/layout/fragment_shape_flash_view.xml
@@ -5,7 +5,7 @@
     android:padding="@dimen/default_padding"
     android:gravity="center"
     android:orientation="vertical">
-    <com.jarvis.dragdropresearch.views.ShapeFlashView
+    <com.jarvis.dragdropresearch.views.FlashShapeView
         android:id="@+id/gesture_view"
         android:layout_width="300dp"
         android:layout_height="250dp"
