--- a/CustomUiComponents/app/src/main/res/layout/fragment_shape_flash_view.xml
+++ b/CustomUiComponents/app/src/main/res/layout/fragment_shape_flash_view.xml
@@ -7,8 +7,8 @@
     android:orientation="vertical">
     <com.jarvis.dragdropresearch.views.FlashShapeView
         android:id="@+id/gesture_view"
-        android:layout_width="300dp"
-        android:layout_height="250dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:padding="2dp"
         android:background="@drawable/bg_gesture_practice" />
 </LinearLayout>
